@@ -256,15 +256,6 @@ in Debian.
 </varlistentry>
 <varlistentry>
 
-<term>autopartkit</term><listitem><para>
-
-Automatically partitions an entire disk according to preset
-user preferences.
-
-</para></listitem>
-</varlistentry>
-<varlistentry>
-
 <term>partitioner</term><listitem><para>
 
 Allows the user to partition disks attached to the system. A
