@@ -21,6 +21,9 @@ installation-guide (2008xxxx) UNRELEASED; urgency=low
   * Update task selection section for changes in desktop task preseeding.
   * Fix double / in links, spotted by Stanislav Gromov. Closes: #472813.
 
+  [ Joey Hess ]
+  * Remove autopartkit from the module list.
+
  -- Frans Pop <fjp@debian.org>  Thu, 27 Mar 2008 00:44:19 +0100
 
 installation-guide (20080211) unstable; urgency=low
